- Remove File caching because it doesn't cause a noticable performance benefit over a local network and because it sometimes doesn't write over stale files.
- Client accepts selenium_browser_start_command parameter, which allows the user to parameterize the selenium_browser_start_command
- Added support for running specs in Internet Explorer via POST /runners/iexplore
- Resource file download performance improvements via caching and chunked sending
- Fixed false positive bug when Client connection times out

0.1.1
- SuiteFinish#post immediately closes the connection

0.1.0
- Initial Release extracted from JsTestCore.
- Added JsTestCore::WebRoot.dispatch_specs and .dispatch_strategy
- Extracted JsTestCore::Resources::Specs::SpecDir
- Extracted JsTestCore::Resources::Specs::SpecFile
- No longer depending on Guid. The child libraries are responsible for obtaining the Selenium session_id from the client by using top.runOptions.getSessionId().