@@ -4,10 +4,10 @@ module JsTestCore
       property :session
       
       def post
-        if session.id == 'user'
-          STDOUT.puts rack_request['text']
-        else
+        if session.associated_with_a_runner?
           Runner.finalize(session.id, rack_request['text'])
+        else
+          STDOUT.puts rack_request['text']
         end
         connection.send_head
         connection.send_body("")
